--- a/favicon_usage.html
+++ b/favicon_usage.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <title>Favicon</title>
   </head>
-  <body>
-    <img src="./html-nedir.jpg" title="Html" width="1000" height="300" />
-  </body>
+  <body></body>
 </html>
